--- a/magnum.html
+++ b/magnum.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="formulario.css" media="">
-    <link rel="stylesheet" typr="text/css" href="style.css" media="">
     <title>Cadastro</title>
 </head>
 
 <body>
     <div class="campo">
-        <img src="magnum.jpg" alt="logo" width=100 height=30>
-        <h1 id="titulo">Produto em Garantia</h1>
-        <p id="subtitulo">Complete suas informações</p>       
+        <h1 id="titulo">Cadastro de DEVs</h1>
+        <p id="subtitulo">Complete suas informações</p>
         <br>
     </div>
 
     <form>
         <fieldset class="grupo">
             <div class="campo">
-                <label for="nome"><strong>Cliente</strong></label>
+                <label for="nome"><strong>Nome</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
             <div class="campo">
-                <label for="sobrenome"><strong>Telefone</strong></label>
+                <label for="sobrenome"><strong>Sobrenome</strong></label>
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
         </fieldset>
@@ -33,3 +31,62 @@
             <label for="email"><strong>Email</strong></label>
             <input type="email" name="email" id="email" required>
         </div>
+
+        <div class="campo">
+            <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
+            <label>
+                <input type="radio" name="devweb" value="frontend" checked>Front-end
+            </label>
+            <label>
+                <input type="radio" name="devweb" value="backend">Back-end
+            </label>
+            <label>
+                <input type="radio" name="devweb" value="fullstack">Full-stack
+            </label>
+        </div>
+
+        <div class="campo">
+            <label for="senioridade"><strong>Senioridade</strong></label>
+            <select id="senioridade">
+                <option selected disabled value="">Selecione</option>
+                <option>Estagiário</option>
+                <option>Júnior</option>
+                <option>Pleno</option>
+                <option>Sênior</option>
+            </select>
+        </div>
+
+        <fieldset class="grupo">
+            <div id="check">
+                <label><strong>Seleciona as tecnologias que utiliza: </strong></label><br><br>
+                <input type="checkbox" name="tec1" id="tec1" value="HTML">
+                <label for="tec1">HTML</label>
+                <input type="checkbox" name="tec2" id="tec2" value="CSS">
+                <label for="tec2">CSS</label>
+                <input type="checkbox" name="tec3" id="tec3" value="Javascript">
+                <label for="tec3">Javascript</label>
+                <input type="checkbox" name="tec4" id="tec4" value="PHP">
+                <label for="tec4">PHP</label>
+                <input type="checkbox" name="tec5" id="tec5" value="Java">
+                <label for="tec5">Java</label>
+                <input type="checkbox" name="tec6" id="tec6" value="Python">
+                <label for="tec6">Python</label>
+                <input type="checkbox" name="tec7" id="tec7" value="C">
+                <label for="tec7">C</label>
+                <input type="checkbox" name="tec8" id="tec8" value="C#">
+                <label for="tec8">C#</label>
+                <input type="checkbox" name="tec9" id="tec9" value="C++">
+                <label for="tec9">C++</label>
+            </div>
+
+            <div class="campo">
+                <br>
+                <label><strong>Conte um pouco da sua experiência como desenvolvedor: </strong></label>
+                <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
+            </div>
+
+            <button class="botao" type="submit">Concluído</button>
+        </fieldset>
+    </form>
+</body>
+</html>
