--- a/magnum.html
+++ b/magnum.html
@@ -9,20 +9,21 @@
 
 <body>
     <div class="campo">
-        <h1 id="titulo">Cadastro de DEVs</h1>
-        <p id="subtitulo">Complete suas informações</p>
+        <img src="magnum.jpg" alt="logo" width=100 height=30>
+        <h1 id="titulo">Produto em Garantia</h1>
+        <p id="subtitulo">Complete suas informações</p>       
         <br>
     </div>
 
     <form>
         <fieldset class="grupo">
             <div class="campo">
-                <label for="nome"><strong>Nome</strong></label>
+                <label for="nome"><strong>Cliente</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
             <div class="campo">
-                <label for="sobrenome"><strong>Sobrenome</strong></label>
+                <label for="sobrenome"><strong>Telefone</strong></label>
                 <input type="text" name="sobrenome" id="sobrenome" required>
             </div>
         </fieldset>
@@ -33,59 +34,49 @@
         </div>
 
         <div class="campo">
-            <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
+            <label><strong>Qual é o produto que voce adquiriu ?</strong></label>
             <label>
-                <input type="radio" name="devweb" value="frontend" checked>Front-end
+                <input type="radio" name="devweb" value="frontend" checked>Pneu
             </label>
             <label>
-                <input type="radio" name="devweb" value="backend">Back-end
+                <input type="radio" name="devweb" value="backend">Camara
             </label>
             <label>
-                <input type="radio" name="devweb" value="fullstack">Full-stack
+                <input type="radio" name="devweb" value="fullstack">Roda
             </label>
         </div>
 
         <div class="campo">
-            <label for="senioridade"><strong>Senioridade</strong></label>
+            <label for="senioridade"><strong>Local de Aquisição</strong></label>
             <select id="senioridade">
                 <option selected disabled value="">Selecione</option>
-                <option>Estagiário</option>
-                <option>Júnior</option>
-                <option>Pleno</option>
-                <option>Sênior</option>
+                <option>Magnum</option>
+                <option>Revendedora Magnum</option>
+                <option>Distribuidora Magnum</option>
+                <option>Equipamento Original</option>
             </select>
         </div>
 
         <fieldset class="grupo">
             <div id="check">
-                <label><strong>Seleciona as tecnologias que utiliza: </strong></label><br><br>
+                <label><strong>No caso de pneu, escolha o motivo da reclamação : </strong></label><br><br>
                 <input type="checkbox" name="tec1" id="tec1" value="HTML">
-                <label for="tec1">HTML</label>
+                <label for="tec1">Desgaste</label>
                 <input type="checkbox" name="tec2" id="tec2" value="CSS">
-                <label for="tec2">CSS</label>
+                <label for="tec2">Avaria no Produto</label>
                 <input type="checkbox" name="tec3" id="tec3" value="Javascript">
-                <label for="tec3">Javascript</label>
+                <label for="tec3">Identificação</label>
                 <input type="checkbox" name="tec4" id="tec4" value="PHP">
-                <label for="tec4">PHP</label>
-                <input type="checkbox" name="tec5" id="tec5" value="Java">
-                <label for="tec5">Java</label>
-                <input type="checkbox" name="tec6" id="tec6" value="Python">
-                <label for="tec6">Python</label>
-                <input type="checkbox" name="tec7" id="tec7" value="C">
-                <label for="tec7">C</label>
-                <input type="checkbox" name="tec8" id="tec8" value="C#">
-                <label for="tec8">C#</label>
-                <input type="checkbox" name="tec9" id="tec9" value="C++">
-                <label for="tec9">C++</label>
+                <label for="tec4">Causa desconhecida</label>
             </div>
 
             <div class="campo">
                 <br>
-                <label><strong>Conte um pouco da sua experiência como desenvolvedor: </strong></label>
+                <label><strong>descreva o problema apresentado : </strong></label>
                 <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
             </div>
 
-            <button class="botao" type="submit">Concluído</button>
+            <button class="botao" type="submit">Continua</button>
         </fieldset>
     </form>
 </body>
